# Twinfob

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
modules/: CMakeLists.txt
project/: CMakeLists.txt
project/src/: main.cpp
src/: CMakeLists.txt  main.c  main.cpp  sdr.cpp  sdr.h
src/ui/: appwindow.slint
